force-app/main/default/objects/BotTimeoutEvent__e/BotTimeoutEvent__e.object-meta.xml
<CustomObject>
    <description>Evento disparado para enviar mensagens de timeout do bot WhatsApp.</description>
    <label>Bot Timeout Event</label>
    <pluralLabel>Bot Timeout Events</pluralLabel>
</CustomObject>