force-app/main/default/objects/BotTimeoutEvent__e/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>