force-app/main/default/objects/BotTimeoutEvent__e/fields/MessageText__c.field-meta.xml
<CustomField>
    <fullName>MessageText__c</fullName>
    <description>Conteúdo da mensagem a ser enviada.</description>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>