force-app/main/default/objects/BotTimeoutEvent__e/fields/MessagingSessionId__c.field-meta.xml
<CustomField>
    <fullName>MessagingSessionId__c</fullName>
    <description>Id da sessão de messaging original.</description>
    <label>Messaging Session Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>